--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ minititle: Hooks & Loops
 description: A UX blog dedicated to the psychological principles and design choices that keep us coming back for more.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-github_repo: jekyll # the GitHub repo name for your project
-github_username: jekyll
+github_repo: uxblog # the GitHub repo name for your project
+github_username: MiniMinstrel
 
 # Optional social link, you can choose from the following options:
 # twitter (default), instagram, medium, or dribbble
